--- a/package.json
+++ b/package.json
@@ -60,6 +60,7 @@
     "chart.js": "^2.7.2",
     "cookie-parser": "^1.4.3",
     "css-loader": "^0.28.11",
+    "evergage-datalayer": "^2.0.3",
     "express": "^4.16.3",
     "express-jwt": "^5.3.0",
     "extract-text-webpack-plugin": "^4.0.0-beta.0",
@@ -83,6 +84,8 @@
     "react-chartjs-2": "^2.7.0",
     "react-dom": "^16.2.0",
     "react-dropzone": "^4.2.9",
+    "react-evergage-ab": "^2.2.5",
+    "react-evergage-personalize": "^2.1.2",
     "react-helmet": "^5.2.0",
     "react-redux": "^5.0.7",
     "react-router": "^4.2.0",
