add as elasticbeanstalk app

--- a/.gitignore
+++ b/.gitignore
@@ -17,3 +17,8 @@ dist/*
 logs/*.log
 npm-debug.log*
 *.zip
+
+# Elastic Beanstalk Files
+.elasticbeanstalk/*
+!.elasticbeanstalk/*.cfg.yml
+!.elasticbeanstalk/*.global.yml
